  - Auto create drop-downs for fields with a relationship to Enumeration
    using relationship.title as the enumTypeId, check to see if is valid
    enumTypeId before creating drop-down
  - Auto create drop-downs for fields with a type one relationship, with
    limit of 200 to avoid crazy drop-downs
- Resource Facade
  - Method for FOP transform to PDF, etc
- Entity Facade
  - More intelligent group by fields, ie add all fields in view-entity and
    DynamicViewEntity to group by list if they don't have a function; with
    support for this get rid of alias.@group-by attribute, not needed when
    done automatically
  - Entity Master data export (master record and all dependent records)
  - Entity and Dependents export: if an entity is a dependent of another,
    and of the master then export it after the other entity it is a
    dependent of
- Tools Screens
  - Auto Screen
    - Master Entity List (entities with dependents)
    - AutoFind Screen (find, create, delete master entity records)
    - AutoEditMaster (tab to edit master entity record)
    - AutoEditDetail (tab for each dependent entity with CrUD)
  - Entity
    - Entity Data UI
      - entity list
      - find on entity with delete
      - create/update entity record
      - view entity record with related entities and links to them
    - Entity Data Import screen


===========================================================================
Release 1.0-beta1 - 01 Apr 2011
===========================================================================

The 1.0-beta1 release is the first feature-complete release for the 1.0
series. Various tools screens that may be included in the 1.0-final release
are not yet complete, but the framework itself is feature-complete.
Following this release the focus for the framework shifts from
implementation to testing and to building applications and tools based on
it (in Moqui Framework, Moqui Mantle, and in other Moqui-based projects).

This release includes:
