@@ -18,5 +18,6 @@ import java.io.Writer;
 public interface TemplateRenderer {
     TemplateRenderer init(ExecutionContextFactory ecf);
     void render(String location, Writer writer) throws BaseException;
+    String stripTemplateExtension(String fileName);
     void destroy();
 }
