@@ -42,6 +42,7 @@ This release includes:
     limit of 200 to avoid crazy drop-downs
 - Resource Facade
   - Method for FOP transform to PDF, etc
+  - Support .gstring templates (groovy.codehaus.org/Groovy+Templates)
 - Entity Facade
   - More intelligent group by fields, ie add all fields in view-entity and
     DynamicViewEntity to group by list if they don't have a function; with
@@ -451,6 +452,9 @@ Notable features not yet implemented:
 Tools probable for 1.0 final:
 ===========================================================================
 
+- Choose macro templates and render-mode.text based on user agent in
+  addition to render mode (for some examples of strings to look for see:
+  http://www.hand-interactive.com/resources/detect-mobile-javascript.htm)
 - Tools Screens
   - Entity
     - Entity Data Export screen
